--- a/app/src/main/res/layout/activity_admin_edit_tour.xml
+++ b/app/src/main/res/layout/activity_admin_edit_tour.xml
@@ -40,7 +40,7 @@
                     android:src="@drawable/ic_arrow_left_black" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/img_avatar_tour"
+                    android:id="@+id/img_avatar_edit_tour"
                     android:layout_width="wrap_content"
                     android:layout_height="120dp"
                     android:src="@drawable/image_camera" />
@@ -53,7 +53,7 @@
                     app:cardElevation="1dp">
 
                     <ImageView
-                        android:id="@+id/btn_change_avatar_tour"
+                        android:id="@+id/btn_change_avatar_edit_tour"
                         android:layout_width="36dp"
                         android:layout_height="36dp"
                         android:scaleType="centerCrop"
@@ -76,7 +76,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageButton
-                    android:id="@+id/imgBtn_add_image_tour"
+                    android:id="@+id/imgBtn_add_image_edit_tour"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
@@ -88,7 +88,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcv_image_tour"
+                android:id="@+id/rcv_image_edit_tour"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="16dp" />
@@ -102,7 +102,7 @@
                 android:theme="@style/LoginTextInputLayout_overlay">
 
                 <AutoCompleteTextView
-                    android:id="@+id/selectCategoryTour"
+                    android:id="@+id/selectCategoryEditTour"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="none"
@@ -122,7 +122,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txt_adults_tour_add"
+                    android:id="@+id/txt_adults_edit_tour"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Nhập độ tuổi"
@@ -144,7 +144,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txt_name_tour_add"
+                    android:id="@+id/txt_name_edit_tour"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Nhập tên tour"
@@ -166,7 +166,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView">
 
                 <AutoCompleteTextView
-                    android:id="@+id/selectLocationTour"
+                    android:id="@+id/selectLocationEditTour"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="none"
@@ -188,7 +188,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txt_descripton_tour_add"
+                    android:id="@+id/txt_descripton_edit_tour"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Mô tả tour..."
@@ -209,7 +209,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txt_price_tour_add"
+                    android:id="@+id/txt_price_edit_tour"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Nhập giá tour"
@@ -231,7 +231,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageButton
-                    android:id="@+id/imgBtn_add_stoppoint"
+                    android:id="@+id/imgBtn_edit_stoppoint"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
@@ -244,7 +244,7 @@
 
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcv_list_stoppoint"
+                android:id="@+id/rcv_list_stoppoint_edit_tour"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -263,7 +263,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txt_start_day_tour_add"
+                    android:id="@+id/txt_start_day_edit_tour"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="false"
@@ -290,7 +290,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txt_end_day_tour_add"
+                    android:id="@+id/txt_end_day_edit_tour"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="false"
@@ -305,7 +305,7 @@
 
 
             <Switch
-                android:id="@+id/sw_public_tour_add"
+                android:id="@+id/sw_public_edit_tour"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -313,13 +313,13 @@
 
 
             <Button xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/btn_save_tour_add"
+                android:id="@+id/btn_save_edit_tour"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="50dp"
                 android:background="@drawable/btn_custom_2"
-                android:text="Tạo tour"
+                android:text="Sửa tour"
                 android:textColor="@color/white"
                 app:backgroundTint="@null" />
 
