--- a/app/src/main/res/layout/activity_admin_tour.xml
+++ b/app/src/main/res/layout/activity_admin_tour.xml
@@ -53,7 +53,8 @@
 
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="100dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcv_tour_admin"
