--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -94,66 +94,66 @@
                     </com.google.android.material.card.MaterialCardView>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:orientation="horizontal">-->
 
-                    <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/btn_review_admin"
-                        android:layout_width="0dp"
-                        android:layout_height="100dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_weight="1"
-                        app:cardBackgroundColor="#9938BED4"
-                        app:cardCornerRadius="20dp"
-                        app:cardElevation="0dp"
-                        app:strokeColor="@color/whitesmoke"
-                        app:strokeWidth="1dp">
+<!--                    <com.google.android.material.card.MaterialCardView-->
+<!--                        android:id="@+id/btn_review_admin"-->
+<!--                        android:layout_width="0dp"-->
+<!--                        android:layout_height="100dp"-->
+<!--                        android:layout_marginRight="5dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        app:cardBackgroundColor="#9938BED4"-->
+<!--                        app:cardCornerRadius="20dp"-->
+<!--                        app:cardElevation="0dp"-->
+<!--                        app:strokeColor="@color/whitesmoke"-->
+<!--                        app:strokeWidth="1dp">-->
 
-                        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center">
+<!--                        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:gravity="center">-->
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/roboto_bold"
-                                android:text="Đánh giá"
-                                android:textColor="@color/white"
-                                android:textSize="16dp" />
-                        </LinearLayout>
-                    </com.google.android.material.card.MaterialCardView>
+<!--                            <TextView-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:fontFamily="@font/roboto_bold"-->
+<!--                                android:text="Đánh giá"-->
+<!--                                android:textColor="@color/white"-->
+<!--                                android:textSize="16dp" />-->
+<!--                        </LinearLayout>-->
+<!--                    </com.google.android.material.card.MaterialCardView>-->
 
-                    <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/btn_statistical_admin"
-                        android:layout_width="0dp"
-                        android:layout_height="100dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_weight="1"
-                        app:cardBackgroundColor="#9938BED4"
-                        app:cardCornerRadius="20dp"
-                        app:cardElevation="0dp"
-                        app:strokeColor="@color/whitesmoke"
-                        app:strokeWidth="1dp">
+<!--                    <com.google.android.material.card.MaterialCardView-->
+<!--                        android:id="@+id/btn_statistical_admin"-->
+<!--                        android:layout_width="0dp"-->
+<!--                        android:layout_height="100dp"-->
+<!--                        android:layout_marginLeft="5dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        app:cardBackgroundColor="#9938BED4"-->
+<!--                        app:cardCornerRadius="20dp"-->
+<!--                        app:cardElevation="0dp"-->
+<!--                        app:strokeColor="@color/whitesmoke"-->
+<!--                        app:strokeWidth="1dp">-->
 
-                        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center">
+<!--                        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:gravity="center">-->
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/roboto_bold"
-                                android:text="Thống kê"
-                                android:textColor="@color/white"
-                                android:textSize="16dp" />
-                        </LinearLayout>
-                    </com.google.android.material.card.MaterialCardView>
-                </LinearLayout>
+<!--                            <TextView-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:fontFamily="@font/roboto_bold"-->
+<!--                                android:text="Thống kê"-->
+<!--                                android:textColor="@color/white"-->
+<!--                                android:textSize="16dp" />-->
+<!--                        </LinearLayout>-->
+<!--                    </com.google.android.material.card.MaterialCardView>-->
+<!--                </LinearLayout>-->
 
 
             </LinearLayout>
